# Cpp_OpenGL

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml  test_scatter.py
Cpp_library/: CMakeLists.txt
Cpp_library/include/cpp_core/: engine.hpp  mesh.hpp
Cpp_library/src/: engine.cpp  mesh_loader.cpp
python/: CMakeLists.txt  pybind_module.cpp
